Fix header overlap by video controls, change z-index of header to 1001, change z-index of close button to 1002

--- a/src/components/HamburgerNav/HBNavOverlay.css
+++ b/src/components/HamburgerNav/HBNavOverlay.css
@@ -31,7 +31,7 @@
     margin-top: 9px;
     margin-left: -5px;
     position: absolute;
-    z-index: 1001;
+    z-index: 1002;
     top: 14px;
     left: 20px;
     cursor: pointer;
