--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -82,6 +82,7 @@
 }
 
 header {
+    z-index: 1001;
     position: sticky;
     top: 0;
     background-color: black;
